# MEDICAREE

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
config/: settings.py  urls.py
medicare/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
medicare/migrations/: 0001_initial.py
static/css/: style.css
static/js/: main.js
templates/medicare/: about.html  base.html  contact.html  dashboard.html  home.html  services.html  signup.html
templates/registration/: login.html
